--- a/GraduationProject-Cluster/graduation-project-cluster/src/main/resources/application.yml
+++ b/GraduationProject-Cluster/graduation-project-cluster/src/main/resources/application.yml
@@ -69,12 +69,10 @@ spring:
     #driver-class-name:springBoot2.x 后驱动程序通过SPI自动注册，并且通常不需要手动加载驱动程序类。
     druid:
       # 下面为连接池的补充设置，应用到上面所有数据源中
-      # 初始化大小，最小，最大
-      initial-size: 5
-      min-idle: 5
-      max-active: 20
-      # 配置获取连接等待超时的时间
-      max-wait: 60000
+      initial-size: 5   #线程池初大小
+      min-idle: 5       #线程池最小空闲连接
+      max-active: 2000  #线程池最大连接数
+
      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       time-between-eviction-runs-millis: 60000
       # 配置一个连接在池中最小生存的时间，单位是毫秒
@@ -120,7 +118,7 @@ spring:
     # Redis服务器连接密码（默认为空）
     password: toor
    # 连接超时时间（毫秒）
-    timeout: 10000
+    timeout: 60000
 
     #哨兵模式
     sentinel:
@@ -136,15 +134,15 @@ spring:
     lettuce:
       pool:
         # 连接池最大连接数（使用负值表示没有限制）
-        max-active: 50
+        max-active: 5000
         # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: 10000 #毫秒
+        max-wait: 60000 #毫秒
         # 连接池中的最大空闲连接
         max-idle: 8
         # 连接池中的最小空闲连接
         min-idle: 0
       #关闭超时时间，毫秒
-      shutdown-timeout: 100
+      shutdown-timeout: 1000
 
   #使用Spring Cache
   cache:
